test/expected/declare_sc16.out
declare x as signed char16_t
        ^
9: error: "signed char16_t" is illegal for built-in type
